@@ -991,6 +991,7 @@ void
 PyOS_AfterFork(void)
 {
 #ifdef WITH_THREAD
+    _PyGILState_Reinit();
     PyEval_ReInitThreads();
     main_thread = PyThread_get_thread_ident();
     main_pid = getpid();
